@@ -1,4 +1,7 @@
-2018-12-28  Markus Gans  <guru.mail@muenster.de>
+2018-12-30  Markus Gans  <guru.mail@muenster.de>
+	* Cygwin compiled fix for C++11
+
+2018-12-29  Markus Gans  <guru.mail@muenster.de>
 	* Text scrolling in FTextView was broken since February 17th!
 	* Replace redundant FString code with templates
 
